# park-it

./: .env.example  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  CLAUDE.original.md  README.md  TEST_SESSION_SUMMARY.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.yml  install.sh  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
api/: database.py
api/alembic/: env.py
api/app/: main.py
api/tests/: conftest.py  test_abandoned_vehicle_routes.py  test_api_key_auth.py  test_area_routes.py  test_audit_log.py  test_auth_service.py  test_cache.py  test_emoney_reader_routes.py  test_event_consumer.py  test_gate_control_routes.py  test_health_advanced.py  test_integration_redis_streams.py  test_jwt.py  test_manual_open_log_routes.py  test_member_group_routes.py  test_member_routes.py  test_metrics.py  test_password.py  test_payment_routes.py  test_payment_service.py  test_payments_booth_result.py  test_pos_heartbeat_route.py  test_rate_limit.py  test_report_routes.py  test_security_headers.py  test_settlement_e2e.py  test_settlement_routes.py  test_shift_routes.py  test_tariff.py  test_transaction_routes.py  test_transaction_service.py  test_vehicle_type_routes.py
booth_bridge/: api_client.py  gate_opener.py  health_server.py  main.py  omnikey_poller.py  serial_manager.py  uhf_poller.py  websocket_server.py
booth_bridge/tests/: test_api_client_retry.py  test_gate_opener_decode.py  test_health_server.py  test_passti_parsing.py  test_serial_manager_locking.py
daemons/: __init__.py  base.py  cli.py  gate_in.py  gate_out.py
daemons/tests/: conftest.py  test_base.py  test_gate_in.py  test_gate_in_audio.py  test_gate_out.py  test_gate_out_deduct.py
docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.prod.yml  nginx.conf  postgres-init.sql
docs/: BOOTH_DEPLOYMENT.md  CERTIFICATION_PREP.md  COMBO_DEMO_REHEARSAL.md  Command Protocol Reader V1.12 ENG.txt  DEVELOPMENT_TESTING_GUIDE.md  DEV_TOOLS_AND_REPORTING_GUIDE.md  Development_Plan_and_Pricing_OLD.md  Development_Plan_v2.md  EPARKING_DOCUMENTATION.md  EParking_System_v2_Design.docx  EParking_v2_Development_Plan.md  FIELD_TECH_GUIDE.md  Format File Settlement Multibank v1.3.txt  GAP_FIX_PLAN.md  GATE_FLOW_SPEC.md  GO_LIVE_CHECKLIST.md  LIGHTWEIGHT_BOOTH.md  OFFER_SUMMARY.md  ONCALL_RUNBOOK.md  OPERATIONS_RUNBOOK.md  OPERATOR_TRAINING.md  POS_BEFORE_AFTER.md  POS_OPERATOR_REDESIGN_BRIEF.md  POS_REDESIGN_PLAN.md  POS_REDESIGN_SUMMARY.md  POS_UNIFIED_LAYOUT_COMPARISON.md  POS_UNIFIED_LAYOUT_IMPLEMENTATION.md  PRODUCTION_AUDIT_2026-05.md  ROADMAP_FAST.md  ROADMAP_MEDIUM.md  ROADMAP_SLOW.md  SECURITY_REVIEW.md  SMART_FEATURES.md  WEEK1_TEST_CHECKLIST.md  parking-methods.md
docs/WEEK 1/: WEEK1_CHANGES.md  WEEK1_TEST_CHECKLIST.md
docs/WEEK 10/: WEEK10_CHANGES.md  WEEK10_TEST_CHECKLIST.md
docs/WEEK 11/: WEEK11_CHANGES.md
docs/WEEK 12/: WEEK12_TEST_CHECKLIST.md
docs/WEEK 3/: WEEK3_CHANGES.md
docs/WEEK 4/: WEEK4_TEST_CHECKLIST.md
docs/WEEK 4.5/: WEEK45_CHANGES.md
docs/WEEK 5/: WEEK5_CHANGES.md  WEEK5_TEST_CHECKLIST.md
docs/WEEK 6/: WEEK6_CHANGES.md  WEEK6_TEST_CHECKLIST.md
docs/WEEK 7/: WEEK7_TEST_CHECKLIST.md
docs/WEEK 9/: WEEK9_CHANGES.md  WEEK9_TEST_CHECKLIST.md
docs/hardware-tests/: 2026-04-25-hardware-integration-report.md
docs/plans/: 2026-04-25-week1-foundation.md  2026-04-26-dev-tools-deployment-reporting-design.md  2026-04-26-dev-tools-deployment-reporting-implementation-plan.md  2026-04-26-week11-hardware-integration.md  2026-04-26-week12-production-deployment.md  2026-04-26-week7-hardening.md  2026-04-26-week9-observability-ci.md  2026-04-27-hardware-configuration-booth-migration.md  2026-04-29-emoney-fix.md  2026-05-07-pos-exit-gate-redesign.md  2026-05-07-pos-frontend-rebuild-design.md  2026-05-14-setup-wizard.md
frontend/: app.vue  components.json  nuxt.config.ts  package-lock.json  package.json  vitest.config.js
frontend/components/: BrandIcon.vue  ConfirmDialog.vue  CrudModal.vue  DataTable.vue  EmoneyPaymentStatus.vue  GateHeartbeatPanel.vue  PageHeader.vue  TabStrip.vue
frontend/composables/: useApi.js  useCrud.js  useCrudPage.js  useFormatters.js  useHardwareStatus.js  useKeyboard.js  useSound.js  useTariffPresets.js
frontend/layouts/: default.vue  kiosk.vue
frontend/middleware/: auth.js  (+1 more)
graphify-out/: .gitignore  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
installer/: README.md  setup.sh
monitoring/: alerts.yml  prometheus.yml
protocols/: factory.py
prototype/: prototype.py
redesign-frontend/: 01 _ IDLE _ ambient clock.html
scripts/: backup_database.sh  check_deployment.py  create-desktop-shortcut.sh  create-shortcuts.sh  deduct_diagnostic.py  deploy.sh  deploy_hardware.py  detect-serial-devices.sh  dev-start.sh  dev-stop.sh  dev-tmux.sh  emoney_diagnostic.py  enable-gate-daemons.sh  field-reconfig.sh  hardware_test.py  inject_signal.py  install.sh  parking_doctor.py  preflight_check.py  probe_audio_tracks.py  regen-enroll-token.sh  regen-setup-token.sh  security_scan.py  seed.py  test_device.py  tray-indicator.py  verify_backup.py  write-udev-rules.sh
services/: vision.py
shared/: __init__.py  config.py  events.py  logging.py  redis.py
systemd/: booth-bridge.service  parking-api.service  parking-backup.service  parking-backup.timer  parking-daemon-gate-in@.service  parking-daemon-gate-out@.service  parking-events.service  parking-frontend.service  parking-worker-bg.service  parking-worker-critical.service  parking-worker-snapshot.service
workers/: settings.py
(+356 files in other folders)
