[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parking-system-v2"
version = "0.1.0"
description = "E-Parking System v2 — FastAPI + Nuxt 3 + PostgreSQL + Redis"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "E-Parking Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Validation / Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Auth
    "PyJWT[crypto]>=2.9.0",
    "bcrypt>=4.0.0",
    # Cache / Queue
    "redis>=5.2.0",
    "arq>=0.26.0",
    # HTTP client
    "httpx>=0.27.0",
    # Logging
    "structlog>=24.0.0",
    # Hardware
    "pyserial>=3.5",
    "evdev>=1.7.0",
    "python-escpos>=3.0",
    "cryptography>=43.0.0",
    # Utils
    "python-multipart>=0.0.12",
    # Metrics
    "prometheus-client>=0.21.0",
    # Reporting
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    # SFTP for settlement file delivery
    "asyncssh>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api/tests", "workers/tests", "protocols/tests", "daemons/tests"]

[tool.hatch.build.targets.wheel]
packages = ["api", "shared", "workers", "daemons", "protocols"]
