[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parking-system-v2"
version = "0.1.0"
description = "E-Parking System v2 — FastAPI + Nuxt 3 + PostgreSQL + Redis"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "E-Parking Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Validation / Settings
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Auth
    "PyJWT[crypto]>=2.9.0",
    "bcrypt>=4.0.0",
    # Cache / Queue
    "redis>=5.2.0",
    "arq>=0.26.0",
    # HTTP client
    "httpx>=0.27.0",
    # Logging
    "structlog>=24.0.0",
    # Hardware
    "pyserial>=3.5",
    "evdev>=1.7.0",
    "python-escpos>=3.0",
    # Utils
    # Metrics
    "prometheus-client>=0.21.0",
    # Reporting
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    # SFTP for settlement file delivery
    "asyncssh>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored skill tooling + generated graph output — not our code to lint.
extend-exclude = [".agents", "graphify-out"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length — handled by formatter, long strings/URLs are fine
    "B008",   # function-call-in-default — FastAPI Depends()/Header()/Query() idiom
    "B904",   # raise-without-from — codebase re-raises HTTPException without chaining
    "SIM105", # try/except/pass is clearer than contextlib.suppress for one-liners
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy relationships use string forward-refs resolved by the registry at
# runtime; the bare class names in Mapped[...] annotations are not real undefs.
"api/app/models/*.py" = ["F821"]
# Deferred/conditional imports after sys.path or env setup are deliberate here.
"api/app/services/setup.py" = ["E402"]
"scripts/*.py" = ["E402"]
# Hyphenated CLI script name is referenced by desktop shortcuts; don't rename.
"scripts/tray-indicator.py" = ["E402", "N999"]
"daemons/cli.py" = ["E402"]
# Test code: throwaway locals, blind asserts, and nested with are acceptable.
"**/tests/**" = ["F841", "B017", "SIM117", "SIM222", "E741", "N806"]
"tests/**" = ["F841", "B017", "SIM117", "SIM222", "E741", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api/tests", "workers/tests", "protocols/tests", "daemons/tests"]

[tool.hatch.build.targets.wheel]
packages = ["api", "shared", "workers", "daemons", "protocols"]
